Basic pester code. See README... this is a hack in progress that I'm only vaguely generalizing for use with other projects.

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 PESTER!
+
+THIS IS JUST A CONCEPT FOR SOMETHING LIKE THOUGHTBOT'S JESTER WRITTEN IN JQUERY.
+
+IT WORKS FOR MY PURPOSES RIGHT NOW... that's all.
+
+-Aaron Gibralter
